# executor_worker

./: .gitmodules  CMakeLists.txt  sonar-project.properties
.github/workflows/: build-test-tools.yml  build.yml  release.yml  test.yml
include/: config.hpp
include/base_runtime/crypto/: crypto.hpp  crypto_factory.hpp  crypto_value.hpp  crypto_vector.hpp  exception.hpp
include/base_runtime/crypto/binfhe/: binfhe.hpp
include/base_runtime/crypto/binfhe/detail/: crypto.hpp  crypto_value.hpp  keyset.hpp
include/base_runtime/data_frame/: data_frame_input.hpp  data_frame_output.hpp
include/base_runtime/executor/: exception.hpp  executor.hpp  runnable_circuit.hpp  runnable_node.hpp  tree_runner.hpp
include/base_runtime/mapper/: circuit.hpp
include/base_runtime/util/: config_loader.hpp
include/controller/: worker_controller.hpp
include/crypto/: crypto.hpp  crypto_factory.hpp  crypto_value.hpp  crypto_vector.hpp  i_keyset.hpp
include/crypto/binfhe/: binfhe.hpp
include/crypto/binfhe/detail/: crypto.hpp  crypto_value.hpp  keyset.hpp
include/data_frame/: data_frame.hpp  data_frame_input.hpp  data_frame_output.hpp
include/executor/: exception.hpp  executor.hpp  runnable_circuit.hpp  runnable_node.hpp  tree_runner.hpp
include/grpc/controller/: worker_controller.hpp
include/mapper/: circuit.hpp
include/util/: config_loader.hpp
src/: main.cpp
src/base_runtime/crypto/: crypto.cpp  crypto_factory.cpp  crypto_vector.cpp
src/base_runtime/crypto/binfhe/: binfhe.cpp
src/base_runtime/crypto/binfhe/detail/: crypto.cpp  crypto_value.cpp  keyset.cpp
src/base_runtime/data_frame/: data_frame.cpp  data_frame_input.cpp  data_frame_output.cpp
src/base_runtime/executor/: executor.cpp  runnable_circuit.cpp  tree_runner.cpp
src/base_runtime/mapper/: circuit.cpp
src/base_runtime/util/: config_loader.cpp
src/controller/: worker_controller.cpp
src/crypto/: crypto.cpp  crypto_factory.cpp  crypto_vector.cpp
src/crypto/binfhe/: binfhe.cpp
src/crypto/binfhe/detail/: crypto.cpp  crypto_value.cpp  keyset.cpp
src/data_frame/: data_frame.cpp  data_frame_input.cpp  data_frame_output.cpp
src/executor/: executor.cpp  runnable_circuit.cpp  tree_runner.cpp
src/grpc/: main.cpp
src/grpc/controller/: worker_controller.cpp
src/grpc/mapper/: circuit.cpp
src/mapper/: circuit.cpp
src/util/: config_loader.cpp
test/: Makefile  pyproject.toml
test/src/: conftest.py  test_and.py  test_circuit_errors.py  test_constant.py  test_copy.py  test_different_size.py  test_invalid_data_ptrs.py  test_negate.py  test_or.py  test_reduce_and.py  test_reduce_mixed_circuit.py  test_reduce_or.py  test_worker.py  worker.py
test/tool/: CMakeLists.txt  data_generator.cpp  dataframe_decryptor.cpp  table_decryptor.cpp
test/tool/include/cli/: command_line.hpp  parameter.hpp  parameter_proxy.hpp  subcommand.hpp
test/tool/include/commands/: encryption_command.hpp  key_command.hpp
test/tool/include/encryption/: crypto.hpp  key.hpp
test/tool/src/: main.cpp
test/tool/src/cli/: command_line.cpp  parameter.cpp  parameter_proxy.cpp  subcommand.cpp
test/tool/src/commands/: encryption_command.cpp  key_command.cpp
test/tool/src/encryption/: crypto.cpp  key.cpp
