[tool.poetry]
name = "test"
version = "0.1.0"
description = "Tests for execution worker"
authors = ["Xert <xertdev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.54.2"
grpcio-tools = "^1.54.2"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
